<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20sp" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" android:paddingLeft="20sp">

        <Button
            android:id="@+id/botonNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onBotonNextClick"
            android:text="@string/botonNext"
            android:width="100sp" />

        <Button
            android:id="@+id/botonStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onBotonStartClick"
            android:text="@string/botonStart"
            android:width="100sp" />

        <TextView
            android:id="@+id/TextoGeneracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generacion"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>